Bevel modifier is set to vertices in 2.90 by default #79160

Closed
opened 2020-07-22 15:47:29 +02:00 by Chingiz Jumagulov · 6 comments

System Information
Operating system: Windows 10, 64-bits
Graphics card: Nvidia Geforce 1080 8 gb, Nvidia Geforce 1070 8 gb

Blender Version
Broken: blender-2.90.0-607d745a79e0-windows64
Worked: any other version

Short description of error
Hi! I have downloaded new Blender build and discovered that the Blender modifier starts off in vertice mode which is a bit odd as in most cases you start of with edges mode. Is that a bug?

Exact steps for others to reproduce the error
1 - Open latest builds
2 - Apply bevel modifier to any object
3 - See that it starts off in vertices mode and bevels all your vertices, which is odd.

**System Information** Operating system: Windows 10, 64-bits Graphics card: Nvidia Geforce 1080 8 gb, Nvidia Geforce 1070 8 gb **Blender Version** Broken: blender-2.90.0-607d745a79e0-windows64 Worked: any other version **Short description of error** Hi! I have downloaded new Blender build and discovered that the Blender modifier starts off in vertice mode which is a bit odd as in most cases you start of with edges mode. Is that a bug? **Exact steps for others to reproduce the error** 1 - Open latest builds 2 - Apply bevel modifier to any object 3 - See that it starts off in vertices mode and bevels all your vertices, which is odd.

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2020-07-22 15:57:44 +02:00
Member

Thanks for the report. I'll commit a fix in a moment.

Thanks for the report. I'll commit a fix in a moment.

This issue was referenced by 0e280b96ca

This issue was referenced by 0e280b96ca82eef0d9039ca06b150cfa05a33a65
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79160
No description provided.