Fix T79160: Bevel modifier set to vertices by default

Need to properly initialize the affect_type field.